--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -31,6 +32,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -42,30 +46,22 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.6.1'
+    implementation 'com.google.android.gms:play-services-measurement-api:21.3.0'
+    implementation 'com.google.android.gms:play-services-auth:20.5.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    //Firebase analitycs
-    implementation 'com.google.firebase:firebase-analytics-ktx:21.2.2'
-    //maps
-    //implementation 'com.google.android.gms:play-services-maps:18.1.0'
-    //google sigin o dependencias de google play
-    implementation 'com.google.android.gms:play-services-auth:20.5.0'
-    //firebase auth
-    implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
-    //firestorage fots
-    implementation 'com.google.firebase:firebase-storage-ktx:20.2.0'
-    //firestore bd
-    implementation 'com.google.firebase:firebase-firestore:24.6.0'
-    //firebase mesaging
-    implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
-
-    // ads(para los anuncios xd)
-    //implementation 'com.google.android.gms:play-services-ads:20.6.0'
-    //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+
+
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.6.1'
+    //implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
 }
