--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.aristidevs.appsis301">
-
+    <!-- PERMISOS PAA NAVEGAR -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -17,6 +17,21 @@
         android:theme="@style/Theme.AppSIS301"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.PerfilActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.InformeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.TableroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.AuthActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.ConsultasActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.CreateCitasActivity"
             android:exported="false" />
