--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    //id 'kotlin-kapt'
 
 }
 
@@ -64,5 +65,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
 
     implementation 'com.google.firebase:firebase-auth-ktx'
+
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    //kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
 }
